--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     <div class="wraper bg-lightgrey">
      <div class="container">
       <div class="row">
-        <div class="col-lg-12 ">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <h1><strong>PORTOFOLIO</strong></h1>
           Lorem ipsum dolor sit amet
 
@@ -21,19 +21,19 @@
     </div>
      <div class="container">
       <div class="row">
-        <div class="col-lg-4 bg-white">
+        <div class="col-lg-4 col-md-12 col-sm-12 bg-white">
           <img src="01-full.jpg" alt="">
           <h2>Threads</h2>
           <h4>Illustration</h4>
 
         </div>
-        <div class="col-lg-4 bg-white">
+        <div class="col-lg-4 col-md-12 col-sm-12 bg-white">
           <img src="02-full.jpg" alt="">
           <h2>Explore</h2>
           <h4>Graphic Design</h4>
 
         </div>
-        <div class="col-lg-4 bg-white">
+        <div class="col-lg-4 col-md-12 col-sm-12 bg-white">
           <img src="03-full.jpg" alt="">
           <h2>Finish</h2>
           <h4>Identify</h4>
@@ -45,19 +45,19 @@
      </div>
      <div class="container">
      <div class="row">
-       <div class="col-lg-4 bg-white">
+       <div class="col-lg-4 col-md-12 col-sm-12 bg-white">
          <img src="04-full.jpg" alt="">
          <h2>Lines</h2>
          <h4>Branding</h4>
 
        </div>
-       <div class="col-lg-4 bg-white">
+       <div class="col-lg-4 col-md-12 col-sm-12 bg-white">
          <img src="05-full.jpg" alt="">
          <h2>Southwest</h2>
          <h4>Branding</h4>
 
        </div>
-       <div class="col-lg-4 bg-white">
+       <div class="col-lg-4 col-md-12 col-sm-12 bg-white">
          <img src="06-full.jpg" alt="">
          <h2>Window</h2>
          <h4>Identify</h4>
@@ -73,7 +73,7 @@
    <div class="wraper bg-lightgrey">
      <div class="container">
        <div class="row">
-         <div class="col-lg-12">
+         <div class="col-lg-12 col-md-12 col-sm-12">
            <h1>OUR AMAIZING TEAM</h1>
            <h4>LOREM IPSUM DOLORUM</h4>
          </div>
@@ -83,7 +83,7 @@
      </div>
      <div id="ourteam" class="container">
        <div class="row">
-         <div class="col-lg-4">
+         <div class="col-lg-4 col-md-12 col-sm-12">
            <img src="uno.jpg" class="mx-auto img-rounded" alt="">
            <h3>Kay Garland</h3>
            <h4>Lorem ipsum</h4>
@@ -92,7 +92,7 @@
            <a href="//http:www.twitter.com">LikedIn</a>
 
          </div>
-         <div class="col-lg-4">
+         <div class="col-lg-4 col-md-12 col-sm-12">
            <img src="due.jpg" class="mx-auto img-rounded" alt="">
            <h3>Larry Parker</h3>
            <h4>Lorem ipsum</h4>
@@ -101,7 +101,7 @@
            <a href="//http:www.twitter.com">LikedIn</a>
 
          </div>
-         <div class="col-lg-4">
+         <div class="col-lg-4 col-md-12 col-sm-12">
            <img src="tre.jpg" class="mx-auto img-rounded" alt="">
            <h3>Diana Peterson</h3>
            <h4>Lorem ipsum</h4>
@@ -122,7 +122,7 @@
    <div class="wraper bg-lightgrey">
      <div class="container">
        <div class="row">
-         <div class="col-lg-12">
+         <div class="col-lg-12 col-md-12 col-sm-12">
            <br><br><br>
 
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
